@@ -264,7 +264,7 @@ INBOX. Useful if you mix POP3 with IMAP clients such as webmail systems.
 \fBmaildir-ignore-folders\fP: [\fIfoldername\fP [...]]
 Specifies IMAP folders (without the leading dot) that should be excluded from
 \fBmaildir-recursion\fP. May be empty; more than one folder should be separated
-by spaces (not tabs).
+by spaces or tabs.
 
 The default is:
 .nf
